# FileExp

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.6b840b0  CompressApp  Makefile  Pack.h  README.md  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
CompressApp_autogen/: moc_predefs.h
CompressApp_autogen/EWIEGA46WW/: moc_mainwindow.cpp
CompressApp_autogen/include/: ui_mainwindow.h
algorithm/: Huffman.cpp  Huffman.h  Pack.cpp  Pack.h
filepack_autogen/: moc_predefs.h
